--- a/package.json
+++ b/package.json
@@ -15,24 +15,31 @@
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/react-native": "^0.72.3",
+    "axios": "^1.6.0",
     "expo": "~49.0.13",
+    "expo-blur": "~12.4.1",
+    "expo-linear-gradient": "~12.3.0",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-radio-buttons-group": "^3.0.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
     "yup": "^1.3.2",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-blur": "~12.4.1"
+    "expo-av": "~13.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-redux": "^7.1.28"
   },
   "private": true
 }
