--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-native": "^0.72.3",
     "axios": "^1.6.0",
     "expo": "~49.0.13",
+    "expo-av": "~13.4.1",
     "expo-blur": "~12.4.1",
     "expo-linear-gradient": "~12.3.0",
     "expo-sqlite": "~11.3.3",
@@ -28,14 +29,16 @@
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-gifted-charts": "^1.3.16",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-radio-buttons-group": "^3.0.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.14.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "yup": "^1.3.2",
-    "expo-av": "~13.4.1"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
