--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "react-native-gifted-charts": "^1.3.16",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-radio-buttons-group": "^3.0.5",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
+    "react-native-web-maps": "^0.3.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "yup": "^1.3.2"
